--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.2",
+        "alpinejs": "^3.4.2",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "bootstrap": "^4.6.2",
+        "jquery": "^3.7.1",
+        "popper.js": "^1.16.1"
     }
 }
